--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Epic literature, Sanskrit'
 - !lcc 'PK'
+- GITenberg
 title: 'The Mahabharata of Krishna-Dwaipayana Vyasa, Volume 2
 
   Books 4, 5, 6 and 7'
